# WeChatHook

./: Cargo.toml  build.rs
src/: httpServer.rs  lib.rs  types.rs  utils.rs
src/httpServer/: getMyInfo.rs  maimaiDX.rs  sendMessage.rs
