[package]
name = "wechatHook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
libc = "0.2.143"
rocket = { version="=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version="1.28.0", features = ["full"] }
win32console = "0.1.5"
winapi = { version = "0.3.9", features = ["winuser"] }

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
]

[build-dependencies]
forward-dll = "0.1.11"
